--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
-    <h1>Movie awards</h1>
     <div id="react"></div>
+    <script src="dist/bundle.js"></script>
   </body>
 </html>
